[tool.poetry]
name = "MIA"
version = "0.0.0"
description = ""
authors = ["Matt Neary <neary.matt@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "MIA"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "2.0.0"
nltk = "^3.8.1"
spacy = "^3.7.2"
transformers = "^4.35.2"
ipdb = "^0.13.13"
tqdm = "^4.66.1"
scikit-learn = "^1.3.2"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
